--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,13 +2,13 @@
   "name": "MotorLog",
   "short_name": "MotorLog",
   "description": "Intelligent fuel and vehicle management",
-  "start_url": "/",
+  "start_url": "/dashboard",
   "display": "standalone",
-  "background_color": "#F8FAFC",
+  "background_color": "#ffffff",
   "theme_color": "#228B22",
   "icons": [
     {
-      "src": "/favicon.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
