--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,8 @@
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+# Scheduled function to run daily at 8:00 UTC
+[[functions]]
+  path = "/api/cron/check-reminders"
+  schedule = "0 8 * * *"
