--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,5 @@
   package = "@netlify/plugin-nextjs"
 
 # Scheduled function to run daily at 8:00 UTC
-[[functions]]
-  path = "/api/cron/check-reminders"
+[[functions."/api/cron/check-reminders"]]
   schedule = "0 8 * * *"
