--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-pwa": "^5.6.0",
+    "node-fetch": "^2.7.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -64,6 +65,7 @@
   "devDependencies": {
     "@types/google.maps": "^3.55.12",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.20.0",
