--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/node-fetch": "^2.6.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/web-push": "^3.6.3",
     "genkit-cli": "^1.20.0",
     "netlify-cli": "^17.31.1",
     "postcss": "^8",
