--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,11 @@
+
 {
   "name": "MotorLog",
   "short_name": "MotorLog",
   "description": "Intelligent fuel and vehicle management",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#F8FAFC",
   "theme_color": "#228B22",
   "icons": [
     {
@@ -16,6 +17,12 @@
       "src": "icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
